Fix text alignment in the Site Editor sidebar (#48959)
* Fix text alignment

* Remove width width override

--- a/packages/edit-site/src/components/site-hub/style.scss
+++ b/packages/edit-site/src/components/site-hub/style.scss
@@ -26,3 +26,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 }
+
+.edit-site-site-hub__site-title {
+	margin-left: $grid-unit-05;
+}
